[#57] Enable Running Integration Tests Locally with AtomDB Source Code and Local Query Engine
[#62] Create integration tests for get_incoming_links
[#64] Shutdown containers before run tests